--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,11 @@
 			<version>6.9.8</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-htmlunit-driver</artifactId>
+			<version>2.52.0</version>
+		</dependency>
+
 	</dependencies>
 </project>
